Slides 10: some notes

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -384,7 +384,7 @@
     \begin{itemize}
         %\item Ernesto Kofman (Investigador Principal)
         \item Taihú Pire (Investigador Asistente)
-        \item Gastón Castro (Becario Postdoctoral)
+        %\item Gastón Castro (Becario Postdoctoral)
         \item Javier Cremona (Becario Doctoral)
         \item Nicolás Soncini (Becario Doctoral)
     \end{itemize}
@@ -489,7 +489,7 @@
         \hfill%
         \begin{column}{.3\textwidth}
             \begin{itemize} 
-                \item Europe
+                \item Europa
                 \begin{itemize}     
                     \item Paul Newman
                     \item Roland Siegwart
