Slides 10: Add some notes

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -1,12 +1,18 @@
 \begin{frame}
-    \frametitle{Motores DC}
+    \frametitle{Motores de Corriente Continúa (DC Motors)}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
-        \item Imán Permanentemente estacionario
+        \item Dos imanes permanentementes estacionarios, que conforman los polos norte (azul) y sur (rojo).
         \item Electromagnetismo induce torque
-        \item Anillos divididos + brushes cambian la dirección de la corriente
+        \item Los Anillos divididos + brushes cambian la dirección de la corriente
     \end{itemize}
+    
+    \note{La idea principal es que cuando hay una corriente que fluye a través del de un cable (bobina) y dicha bobina se encuentra en el centro de un campo magnético (generado por los imanes externos), dicha bobina va a experimentar una fuerza.}
+    
+    \note{En el eje del motor hay anillo dorado que funciona como cepillo para que circule corriente a través de la bobina (que se encuentra dentro de un campo magnético). Observar que el anillo tiene una ranura para solo permitir pasar corriente en la bobina cuando esta este ubicada de manera tal que la corriente circule de manera perpendicular al campo magnético generado por los imanes.}
+    
+    \note{Se conectan los cables positivo y negativo a una batería, haciendo que pase corriente a través de la bobina. Los imanes norte y sur generan un campo magnético horizontal y la corriente que circula a través de la bobina genera una campo eléctrico en una dirección perpendicular. Esto hace que se genera una fuerza en el eje, moviendolo 180 grados. De esta manera se convierte energía eléctrica en energía mecánica de rotación.}
     
     \begin{figure}[!h]
         \subfloat[]{
