--- a/teoricas/teorica_10/src/control.tex
+++ b/teoricas/teorica_10/src/control.tex
@@ -7,7 +7,8 @@
     \end{center}
     
 
-    
+    \note{En la literatura también se lo denomina think-act-sense paradigm}
+        
     \note{La caja gris representa el software de navegación del robot. En la literatura, a esta parte se la denomina thinking}
     
     \note{En la literatura también se llamada a la parte de los actuadores acting}
