Slides 10: Add dc_motor image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -21,6 +21,9 @@
         \subfloat[]{
             \movie[autostart,poster,loop,showcontrols]{\includegraphics[width=0.2\columnwidth,valign=m]{images/dc_motor_video.jpg}}{videos/dc_motor.mp4}
         }
+        \subfloat[]{
+            \includegraphics[width=0.3\columnwidth,valign=m]{images/dc_motor.pdf}
+        }
     \end{figure}
     
 \end{frame}
