Slides 10: Add pid_control_proportional_noise_effect image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -259,10 +259,33 @@
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
-        \item \TODO{Agregar imágenes }
+        \item P-Control:
+        \begin{equation*}
+            \controlCommand_{t} = K_{p} \error_{t} \text{ con } K_{p} = 1
+        \end{equation*}
     \end{itemize}
     
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/pid_control_proportional.pdf}
+    \end{center}
+    
 \end{frame}
+
+
+\begin{frame}
+    \frametitle{Ruido en la medición}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{itemize}
+        \item ¿Cómo el ruido en el sistema/medición afecta al control?
+    \end{itemize}
+    
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/pid_control_proportional_noise_effect.pdf}
+    \end{center}
+    
+\end{frame}
+
 
 \begin{frame}
     \frametitle{PD-control}
