Slides 10: Add feedback_control_with_delays.pdf image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -363,8 +363,13 @@
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
-        \item \TODO{Agregar imagen}
+        \item ¿Cuánto es el tiempo muerto?
+        \item ¿Podemos distinguir delays causados debido a medición o actuación?
     \end{itemize}
+    
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/feedback_control_with_delays.pdf}
+    \end{center}
     
 \end{frame}
 
