Slides 10: Add smith_predictor.pdf image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -378,8 +378,13 @@
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
-        \item \TODO{Agregar imagen}
+        \item Permite utilizar una ganancia más alta
+        \item Requiere un modelo de sistema preciso
     \end{itemize}
+    
+    \begin{center}
+        \includegraphics[width=0.8\columnwidth]{images/smith_predictor.pdf}
+    \end{center}
     
 \end{frame}
 
