Slides 10: Add rigid_body_kinematics image

--- a/teoricas/teorica_10/slides.tex
+++ b/teoricas/teorica_10/slides.tex
@@ -40,7 +40,7 @@
     \section{Control de Posición}
     \input{src/position_control.tex}
     
-    \section{Trayectoria}
+    \section{Trajectory control}
     \input{src/trajectory_control.tex}
     
 	\section{Bibliografía}
