Slides 10: Improve pid_control_proportional_position.svg

--- a/teoricas/teorica_10/src/position_control.tex
+++ b/teoricas/teorica_10/src/position_control.tex
@@ -1,4 +1,17 @@
 \begin{frame}
+    \frametitle{Motivación: Position control}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{itemize}
+        \item Mover al robot a una ubicación deseada $\state_{des}$
+        \item ¿Cómo generar una señal apropiada de control $\controlCommand$?
+        \item La localización del robot estimada por medio de un sensor con mediciones $\observation$
+    \end{itemize}
+    
+\end{frame}
+
+
+\begin{frame}
     \frametitle{Cinemática de un cuerpo rígido}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
