Add pid_control_positions images

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -244,7 +244,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{P-control}
+    \frametitle{Proportional-control (P-Control)}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
