Slides 01: minor changes

--- a/teoricas/teorica_01/src/tools.tex
+++ b/teoricas/teorica_01/src/tools.tex
@@ -3,7 +3,7 @@
 
     \begin{itemize}
         \item C++/Python
-        \item ROS (Robotics Operating System): framework de robótica
+        \item ROS2 (Robotics Operating System): framework de robótica
         \item Gazebo: simulador
         \item Git: versionador
         \item Docker: contenedor
@@ -12,5 +12,6 @@
         \item Mendeley: manejador de papers
         \item Yed: diagramas
         \item inkscape: gráficos vectorizados
+        \item pdfpc: visualizador de slides (hechas en latex)
     \end{itemize}
 \end{frame}
