--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -106,7 +106,53 @@
 
 \begin{frame}
     \frametitle{Ejercicio: Traslación en 2D}
-    \TODO{Agregar ejemplo de traslación como hice con la rotación}
+
+    \begin{center}
+        \begin{minipage}{0.4\linewidth}
+        \includegraphics[width=\columnwidth]{translation_2D_example.pdf}
+        \end{minipage}
+        \hspace{1em}
+        \begin{minipage}{0.5\linewidth}
+            
+            \only<1>{
+                \begin{equation*}
+                    \toCoord{\point}{B} = \, ?
+                \end{equation*}
+            }
+            \only<2>{
+                \begin{equation*}
+                    \toCoord{\point}{B} = \rotationCoord{B}{A} \toCoord{\point}{A}
+                \end{equation*}
+               
+                \begin{equation*}
+                    R\left(\frac{\pi}{2}\right) =
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        \cos \frac{\pi}{2} & -\sin \frac{\pi}{2} \\
+                        \sin \frac{\pi}{2} & \cos \frac{\pi}{2}
+                    \end{bmatrix}}{A}}{B} =
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        0 & 1 \\
+                        -1 & 0
+                    \end{bmatrix}}{A}}{B}
+                \end{equation*}
+                
+                \begin{equation*}
+                    \toCoord{\begin{bmatrix}
+                        0\\
+                        -1
+                    \end{bmatrix}}{B} =
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        0 & 1 \\
+                        -1 & 0
+                    \end{bmatrix}}{A}}{B}
+                    \toCoord{\begin{bmatrix}
+                        1\\
+                        0
+                    \end{bmatrix}}{A}
+                \end{equation*}                
+            }
+        \end{minipage}
+    \end{center}
 \end{frame}
 
 \begin{frame}
