--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -69,12 +69,9 @@
                 \end{equation*}
             }
             \only<2>{
-                \begin{equation*}
-                    \toCoord{\point}{B} = \rotationCoord{B}{A} \toCoord{\point}{A}
-                \end{equation*}
-               
-                \begin{equation*}
-                    R\left(\frac{\pi}{2}\right) =
+                \begin{align*}
+                    \toCoord{\point}{B} &= \rotationCoord{B}{A} \toCoord{\point}{A}\\
+                    R\left(\frac{\pi}{2}\right) &=
                     \toCoord{\fromCoord{\begin{bmatrix}
                         \cos \frac{\pi}{2} & -\sin \frac{\pi}{2} \\
                         \sin \frac{\pi}{2} & \cos \frac{\pi}{2}
@@ -82,14 +79,11 @@
                     \toCoord{\fromCoord{\begin{bmatrix}
                         0 & 1 \\
                         -1 & 0
-                    \end{bmatrix}}{A}}{B}
-                \end{equation*}
-                
-                \begin{equation*}
+                    \end{bmatrix}}{A}}{B}\\
                     \toCoord{\begin{bmatrix}
                         0\\
                         -1
-                    \end{bmatrix}}{B} =
+                    \end{bmatrix}}{B} &=
                     \toCoord{\fromCoord{\begin{bmatrix}
                         0 & 1 \\
                         -1 & 0
@@ -98,7 +92,7 @@
                         1\\
                         0
                     \end{bmatrix}}{A}
-                \end{equation*}                
+                \end{align*}                
             }
         \end{minipage}
     \end{center}
@@ -119,37 +113,32 @@
                     \toCoord{\point}{B} = \, ?
                 \end{equation*}
             }
-            \only<2>{
+            \only<2-3>{
                 \begin{equation*}
-                    \toCoord{\point}{B} = \rotationCoord{B}{A} \toCoord{\point}{A}
+                    \toCoord{\point}{B} = \toCoord{\begin{bmatrix}
+                    0\\
+                    0
+                    \end{bmatrix}}{B}
                 \end{equation*}
-               
-                \begin{equation*}
-                    R\left(\frac{\pi}{2}\right) =
-                    \toCoord{\fromCoord{\begin{bmatrix}
-                        \cos \frac{\pi}{2} & -\sin \frac{\pi}{2} \\
-                        \sin \frac{\pi}{2} & \cos \frac{\pi}{2}
-                    \end{bmatrix}}{A}}{B} =
-                    \toCoord{\fromCoord{\begin{bmatrix}
-                        0 & 1 \\
-                        -1 & 0
-                    \end{bmatrix}}{A}}{B}
-                \end{equation*}
-                
-                \begin{equation*}
+            }
+            \only<3>{Pero, ¿qué traslación me pasa el punto $\toCoord{\point}{A}$ a $\toCoord{\point}{B}$?} 
+            \only<4>{
+                \begin{align*}
+                    %\toCoord{\point}{B} &= \transform{B}{A} \toCoord{\point}{A}\\
+                    \toCoord{\point}{B} &= \toCoord{\point}{A} + \toCoord{\translation}{B}\\
                     \toCoord{\begin{bmatrix}
                         0\\
-                        -1
-                    \end{bmatrix}}{B} =
-                    \toCoord{\fromCoord{\begin{bmatrix}
-                        0 & 1 \\
-                        -1 & 0
-                    \end{bmatrix}}{A}}{B}
+                        0
+                    \end{bmatrix}}{B} &=
                     \toCoord{\begin{bmatrix}
                         1\\
                         0
-                    \end{bmatrix}}{A}
-                \end{equation*}                
+                    \end{bmatrix}}{A} + \toCoord{\translation}{B}\\
+                    \toCoord{\translation}{B} &= \toCoord{\begin{bmatrix}
+                        -1\\
+                        0
+                    \end{bmatrix}}{B}
+                \end{align*}             
             }
         \end{minipage}
     \end{center}
@@ -169,8 +158,8 @@ Solo traslación:
             \toCoord{y}{A}
         \end{bmatrix} +
         \begin{bmatrix}
-            \toCoord{t_{x}}{A}\\
-            \toCoord{t_{y}}{A}
+            \toCoord{t_{x}}{B}\\
+            \toCoord{t_{y}}{B}
         \end{bmatrix}
     \end{equation*}
 Agregando Rotación:
@@ -188,8 +177,8 @@ Agregando Rotación:
             \toCoord{y}{A}
         \end{bmatrix} +
         \begin{bmatrix}
-            \toCoord{t_{x}}{A}\\
-            \toCoord{t_{y}}{A}
+            \toCoord{t_{x}}{B}\\
+            \toCoord{t_{y}}{B}
         \end{bmatrix}
     \end{align*}
 
@@ -203,7 +192,7 @@ Representamos las matrices y vectores simbólicamente:
         \begin{bmatrix}
             \toCoord{x}{A}\\
             \toCoord{y}{A}
-        \end{bmatrix} + \toCoord{\translation}{A}
+        \end{bmatrix} + \toCoord{\translation}{B}
     \end{equation*}
 
 
@@ -216,7 +205,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
             1
         \end{bmatrix} &=
         \begin{bmatrix}
-            \rotationCoord{B}{A} & \toCoord{\translation}{A}\\
+            \rotationCoord{B}{A} & \toCoord{\translation}{B}\\
             \vec{0} & 1
         \end{bmatrix}
         \begin{bmatrix}
@@ -231,8 +220,8 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
         \end{bmatrix} &=
         \transform{B}{A}
         \begin{bmatrix}
-            \toCoord{x}{A}\\
-            \toCoord{y}{A}\\
+            \toCoord{x}{B}\\
+            \toCoord{y}{B}\\
             1
         \end{bmatrix}
     \end{align*}
