Slides 02: Add rotation columns vector interpretation image

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -705,7 +705,9 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     \frametitle{Propiedades de matrices Rotación}
     \TODO{Agregar imagen y explicar mejor: Los vectores columnas de la matriz de Rotación muestran donde se encuentran posicionados los ejes x, y y z luego de aplicar la rotación}
 
-
+    \begin{figure}[!h]
+        \includegraphics[width=0.5\columnwidth]{./images/rotation_matrix_column_vectors.pdf}
+    \end{figure}
 
 \end{frame}
 
