Slides 02: Add rotation image for column vector interpretation

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -702,7 +702,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
 
 
 \begin{frame}
-    \frametitle{Propiedades de matrices Rotación}
+    \frametitle{Matríz de Rotación: Vectores columna}
 
     \begin{figure}[!h]
         \includegraphics[width=0.5\columnwidth]{./images/rotation_matrix_column_vectors.pdf}
@@ -731,11 +731,11 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
 
 
 \begin{frame}
-    \frametitle{Propiedades de matrices Rotación}
+    \frametitle{Matríz de Rotación: Vectores columna}
 
     \begin{center}
         \begin{minipage}{0.4\linewidth}
-            \includegraphics[width=\columnwidth]{coordinate_system_rotation_colors.pdf}
+            \includegraphics[width=\columnwidth]{coordinate_system_rotation.pdf}
         \end{minipage}
         \hspace{1em}
         \begin{minipage}{0.5\linewidth}
