Slides 02: Improve rotation slide

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -704,10 +704,11 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
 \begin{frame}
     \frametitle{Matríz de Rotación: Vectores columna}
 
+    Los vectores columna de una matríz de rotación indican la ubicación de cada eje del sistema de coordenadas canónico.
+
     \begin{figure}[!h]
         \includegraphics[width=0.5\columnwidth]{./images/rotation_matrix_column_vectors.pdf}
     \end{figure}
-
 
     \begin{equation*}
         \begin{bmatrix}
