--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -26,9 +26,17 @@
 
 \begin{frame}
 	\frametitle{Robots de ficción}
-	\begin{figure}[!h]
-		\includegraphics[width=0.7\columnwidth]{wheres_wall_e_poster.jpg}
-     \end{figure}
+    \centering
+    \only<1>{
+        \begin{figure}
+            \includegraphics[width=0.7\columnwidth]{wheres_wall_e_poster.jpg}
+        \end{figure}
+    }
+    \only<2>{
+        \begin{figure}
+            \includegraphics[width=0.7\columnwidth]{wheres_wall_e_poster_found.jpg}
+        \end{figure}
+    }
     \note{Autor de la imagen Richard Sergeant}
 \end{frame}
 
