--- a/teoricas/teorica_03/src/gnss.tex
+++ b/teoricas/teorica_03/src/gnss.tex
@@ -56,7 +56,7 @@
 \begin{frame}
     \frametitle{Sistema GNSS-PPK (Post Processed Kinematic)}
     \begin{center}
-        \includegraphics[width=0.3\columnwidth]{gps_rtk_system.pdf}
+        \includegraphics[width=0.3\columnwidth]{gnss_ppk_system.pdf}
     \end{center}
 
     El PPK (Post Processed Kinematic), a diferencia del RTK, realiza un proceso de datos a posteriori (offline).
